增加base基础类中对通用底部栏的处理,加入可控制的底部通用栏的分割线
增加base基础类中对通用底部栏的处理,加入可控制的底部通用栏的分割线

--- a/app/src/main/res/layout/include_layout_bottom.xml
+++ b/app/src/main/res/layout/include_layout_bottom.xml
@@ -2,6 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/at_color_red_date"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_common_bottom_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimens_0.5_dp"
+        android:background="@color/at_color_white_cutting_line_and_selected_color"
+        android:contentDescription="@string/desc_line" />
+
+    <LinearLayout
+        android:id="@+id/ll_common_bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+    </LinearLayout>
 
 </LinearLayout>
