--- a/androidcommonframe/src/main/res/values/attrs.xml
+++ b/androidcommonframe/src/main/res/values/attrs.xml
@@ -34,13 +34,13 @@
         <attr name="indicator_color" format="color" />
     </declare-styleable>
 
-    <declare-styleable name="ATCircleView">
+    <declare-styleable name="CircleView">
         <attr name="circle_width" format="dimension" />
         <attr name="circle_corner" format="dimension" />
         <attr name="view_bg_color" format="color" />
     </declare-styleable>
 
-    <declare-styleable name="ATDotPointView">
+    <declare-styleable name="DotPointView">
         <attr name="point_view_selector_background" format="reference" />
         <attr name="point_view_point_size" format="dimension" />
         <attr name="point_view_point_margin" format="dimension" />
