--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_banner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimens_120_dp"
-        android:background="@color/at_color_red_date"
+        android:background="@color/at_color_default"
         android:gravity="center"
         android:textColor="@color/at_color_white"
         android:textSize="@dimen/dimens_20_sp" />
