--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -5,10 +5,10 @@
     android:background="@color/colorAccent">
 
     <TextView
+        android:id="@+id/tv_me_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="我的Fragment"
         android:textColor="@color/at_color_white"
         android:textSize="@dimen/dimens_18_sp" />
 
